# MonobankPersonalAPI

./: Dockerfile  logging.conf  main.py  pyproject.toml
adapter/: monobank_api_adapter.py
app/: formatter.py  logging.conf  main.py
app/adapter/: monobank_api_adapter.py
app/bot/: bot.py
bot/: bot.py
models/: account_info.py  webhook_response.py
