[tool.poetry]
name = "monobankpersonalapi"
version = "1.0.0"
description = ""
authors = ["Danyil Subotin <danyil.subotin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.3"
python-telegram-bot = "^21.2"
python-json-logger = "^2.0.7"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
